--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -43,6 +43,14 @@
             font-weight: 600;
             color: #155724;
         }
+        .footer {
+            position: fixed;
+            bottom: 10px;
+            right: 15px;
+            font-size: 12px;
+            color: gray;
+            font-family: Arial, sans-serif;
+        }
     </style>
 </head>
 <body>
@@ -72,6 +80,11 @@
                 <button class="btn btn-primary w-100">Tambah ke Keranjang</button>
             </div>
         </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer">
+        "eshop-pbp" made by: B - Hasanul Muttaqin
     </div>
 </body>
 </html>
