--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 {% load humanize %}
+{% load static %}
 <html lang="en">
 <head>
+    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
     <meta charset="UTF-8">
     <title>Football Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
