megisi README.md

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -56,7 +56,7 @@
 <body>
     <!-- Header -->
     <div class="shop-header">
-        ⚽ Football Shop
+        ⚽ 6-7 sportswear
     </div>
 
     <!-- Product Card -->
