xml and json grabbber

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -71,7 +71,7 @@
                     <span class="featured-badge">🔥 Featured</span>
                   {% endif %}
                   <!-- view/detail button uses standardized class -->
-                  <a href="{% url 'main:show_products' product.id %}" class="btn btn-standard btn-standard-sm ms-2">View</a>
+                  <a href="{% url 'main:show_products' product.id %}" class="btn btn-standard btn-standard-sm ms-2">Details</a>
                 </div>
               </div>
             </div>
