--- a/templates/base.html
+++ b/templates/base.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block meta %}{% endblock meta %}
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.5/dist/purify.min.js"></script>
     <link rel="stylesheet" href="{% static 'css/global.css' %}"/>
 </head>
 
 <body class="bg-slate-50 text-slate-900">
     {% block content %} {% endblock content %}
+    {% include 'toast.html' %}
+    {% include 'modal.html' %}
+    {% include 'confirmation.html' %}
 </body>
 </html>
